cmake_minimum_required(VERSION 3.20)
project(c_programming_v2 C)

set(CMAKE_C_STANDARD 99)

add_executable(c_programming_v2 main.c chapter/e_03.c chapter/e_03.h chapter/e_04.h chapter/e_04.c chapter/e_05.h chapter/e_05.c chapter/e_06.h chapter/e_06.c chapter/e_10.h chapter/e_10.c chapter/e_13.h chapter/e_13.c chapter/e_14.h chapter/e_14.c chapter/e_15.c chapter/e_15.h chapter/stack.h chapter/stack.c)